auto error page

--- a/pygenhttp/pages/error.html
+++ b/pygenhttp/pages/error.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404 - Not Found</title>
+    <title>{status_code} - {status_name}</title>
 </head>
 <body>
-    <h1>404 - Not Found</h1>
-    <p>What you're looking for is not here.</p>
+    <center><h1>{status_code} - {status_name}</h1></center>
+    <hr/>
+    <center><p>pygenhttp/{version} on {platform}</p></center>
 </body>
 </html>
